# k8s-rust-operator

./: .gitignore  Cargo.toml  Dockerfile_integration  README.md  endpointslice.go  go.mod  go.sum  justfile  main.go  service-mirror.go  service.go  watcher_test.go
bootstrap-scripts/: bb-statefulset.yaml  dns-utils.yaml  kustomization.yaml  nginx-statefulset.yaml  redis-statefulset.yaml
conf/: lg4rs.yml
src/: main.rs  util.rs
src/global_mirror/: endpoints.rs  service.rs
tests/: watcher_test.go
utils/: create_k3d.sh  install_linkerd.sh  link_multilclusters.sh
watcher/: endpointslice.go  service.go  watcher.go
