[package]
name = "service-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.82.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0.71"
log = "0.4.17" 
tracing = "0.1.28"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.2.7", features = ["derive", "env"] }
